@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         MP3-Podcast
-version:      0.03
+version:      0.04
 version_from: lib/MP3/Podcast.pm
 installdirs:  site
 requires:
